; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_imagelist.c_init_memstream.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_imagelist.c_init_memstream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.memstream = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@Test_Stream_Vtbl = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [36 x i8] c"Failed to create a stream, hr %#x.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.memstream*)* @init_memstream to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_memstream(%struct.memstream* %0) #0 {
  %2 = alloca %struct.memstream*, align 8
  %3 = alloca i64, align 8
  store %struct.memstream* %0, %struct.memstream** %2, align 8
  %4 = load %struct.memstream*, %struct.memstream** %2, align 8
  %5 = getelementptr inbounds %struct.memstream, %struct.memstream* %4, i32 0, i32 1
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i32* @Test_Stream_Vtbl, i32** %6, align 8
  %7 = load i32, i32* @TRUE, align 4
  %8 = load %struct.memstream*, %struct.memstream** %2, align 8
  %9 = getelementptr inbounds %struct.memstream, %struct.memstream* %8, i32 0, i32 0
  %10 = call i64 @CreateStreamOnHGlobal(i32* null, i32 %7, i32* %9)
  store i64 %10, i64* %3, align 8
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* @S_OK, align 8
  %13 = icmp eq i64 %11, %12
  %14 = zext i1 %13 to i32
  %15 = load i64, i64* %3, align 8
  %16 = call i32 @ok(i32 %14, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i64 %15)
  ret void
}

declare dso_local i64 @CreateStreamOnHGlobal(i32*, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
